Refine layout item

--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -42,7 +42,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
-            android:text="56995"
+            android:text="56,9K"
             android:textColor="#131010"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/user_image"
@@ -52,7 +52,7 @@
             android:id="@+id/follower_user_text"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:layout_marginBottom="16dp"
             android:text="Follower"
             android:textColor="#4A4A4A"
@@ -76,7 +76,7 @@
             android:id="@+id/following_user_text"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:layout_marginBottom="16dp"
             android:text="Following"
             android:textColor="#4A4A4A"
