--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,87 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp"
-    app:cardPreventCornerOverlap="true">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <variable
+            name="user"
+            type="id.dipoengoro.githubuser.model.User" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="true">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image"
-            android:layout_width="80dp"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:src="@drawable/user1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/name_user_item"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="Jake Wharton"
-            android:textColor="#171717"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/user_image"
-            app:layout_constraintTop_toTopOf="@id/user_image" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_image"
+                android:layout_width="80dp"
+                android:layout_height="0dp"
+                android:layout_margin="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:setImg="@{user.avatar}" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/follower_user_number"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="56,9K"
-            android:textColor="#131010"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/user_image" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/name_user_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/titleNameLight"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/user_image"
+                app:layout_constraintTop_toTopOf="@id/user_image"
+                app:nameAdapter="@{user.name}" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/follower_user_text"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="16dp"
-            android:text="Follower"
-            android:textColor="#4A4A4A"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/follower_user_number" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/follower_user_number"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/intLight"
+                android:textSize="16sp"
+                app:intAdapter="@{user.follower}"
+                app:layout_constraintBottom_toBottomOf="@id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/user_image" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/following_user_number"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginBottom="16dp"
-            android:text="12"
-            android:textColor="#131010"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/follower_user_text" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/follower_user_text"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/followers"
+                android:textColor="@color/subLight"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/follower_user_number" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/following_user_text"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="16dp"
-            android:text="Following"
-            android:textColor="#4A4A4A"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/following_user_number" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/following_user_number"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/intLight"
+                android:textSize="16sp"
+                app:intAdapter="@{user.following}"
+                app:layout_constraintBottom_toBottomOf="@id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/follower_user_text" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/following_user_text"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/following"
+                android:textColor="@color/subLight"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/following_user_number" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
