--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="titleNameLight">#171717</color>
+    <color name="intLight">#131010</color>
+    <color name="subLight">#4A4A4A</color>
 </resources>
