--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#95ABD1</color>
+    <color name="purple_500">#596DA9</color>
+    <color name="purple_700">#2D3943</color>
+    <color name="teal_200">#C9DE0A</color>
+    <color name="teal_700">#7E8204</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="titleNameLight">#171717</color>
-    <color name="intLight">#131010</color>
     <color name="subLight">#4A4A4A</color>
 </resources>
